--- a/AnimalRefugeFinal/AnimalRefugeFinal.csproj
+++ b/AnimalRefugeFinal/AnimalRefugeFinal.csproj
@@ -9,6 +9,8 @@
   <ItemGroup>
     <Folder Include="Data\" />
     <Folder Include="Views\Admin\" />
+    <Folder Include="wwwroot\fonts\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
   <ItemGroup>
