--- a/AnimalRefugeFinal/appsettings.json
+++ b/AnimalRefugeFinal/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "PetContext": "Server=tcp:cis174jeaden.database.windows.net,1433;Initial Catalog=Adoption;Persist Security Info=False;User ID=cis174;Password=1!Beefsticks;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
+
 }
