got rid of adoption form and made it a webpage instead

--- a/AnimalRefugeFinal/AnimalRefugeFinal.csproj
+++ b/AnimalRefugeFinal/AnimalRefugeFinal.csproj
@@ -22,4 +22,16 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Home\Adoption.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Home\Adoption.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Views\Home\Adoption.cshtml" />
+  </ItemGroup>
+
 </Project>
